2012-04-05  Martin Pärtel <martin dot partel at gmail dot com>

	* Made -ouse_ino and -oreaddir_ino the default to
	  mirror inodes.
	* Released 1.10.2

2012-03-26  Martin Pärtel <martin dot partel at gmail dot com>

	* Made --map affect chown/chgrp results.
	* Released 1.10.1

2012-03-13  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --map.
	* Released 1.10

2012-01-24  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --hide-hard-links.
	* Moved some questionable default behavior to new
	  option --realistic-permissions.

2010-08-07  Martin Pärtel <martin dot partel at gmail dot com>

	* Improved --help and manpage.
	* Disabled FUSE attribute cache when using mirroring to avoid
	  caching the owner of files when observed by a mirrored user.
	* Added a testcase for the above.
	* Released 1.9

2010-01-17  Martin Pärtel <martin dot partel at gmail dot com>

	* Added options to control the behavior of chown and chgrp.
	* Released 1.8.4

2009-03-28  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --ctime-from-mtime. Contributed by Shez.
	* Added --chmod-allow-x.
	* Released 1.8.3

2008-12-14  Martin Pärtel <martin dot partel at gmail dot com>

	* Converted ChangeLog to UTF-8.

2008-12-13  Martin Pärtel <martin dot partel at gmail dot com>

	* Specified that the license is GPL v2 or later in all source files
	  and in the README file.
	* Released 1.8.2 with no functional changes.

2008-12-12  Martin Pärtel <martin dot partel at gmail dot com>

	* Made xattr-rw the default instead of xattr-ro,
	  which returned a "permission denied" that could mislead some programs.
	* Released 1.8.1

2008-08-17  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed segfault in option parsing on platforms where
	  sizeof(int) != sizeof(long), such as amd64.
	* Released 1.8

2008-07-08  Martin Pärtel <martin dot partel at gmail dot com>

	* Symlinks to absolute paths didn't work. Now they do.
	  Reported by rpfuller. Thanks!